roles/bootstrap/templates/iptables/rules.v4
# Generated by iptables-save v1.4.12 on Tue Jan 19 12:22:02 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [776384815:139015029619]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A fail2ban-ssh -j RETURN

-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m multiport --dports 60000:60010 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT


# netdata
-A INPUT -p tcp -m tcp --dport 19999 -j ACCEPT
# python simple http
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT

# teamspeak
-A INPUT -p tcp -m tcp --dport 30033 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 10011 -j ACCEPT
-A INPUT -p udp -m udp --dport 9987 -j ACCEPT
-A INPUT -p udp -m udp --dport 9988 -j ACCEPT

# nginx
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -j DROP
COMMIT
# Completed on Tue Jan 19 12:22:02 2016
